1.8.33
------
(RB=172922)
Remove dependency of system properties from build.gradle in restli-tools.

1.8.32
------
(RB=170403)
Added PatchHelper class with method which allows applying projection on patch.

(RB=171436)
Instead of getting properties from system properties, create config class for the data and Rest.li generators.
Hide the existing "run()" functions in the concrete generators to private generate() and provide static run() to pass required properties. Command-line main() will still use system properties.
Update the gradle plugin to use the new generator pattern. There is no need for synchronization block and support parallel build.
Remove dataModelJar and restModelJar artifacts from the plugin.

1.8.31
------
(RB=170494)
Interfacing the gradle plugin for LinkedIn specific version. 3rd party plugin could dynamically load the plugin and customize its properties.

1.8.30
------
(RB=170652)
Fix backward incompatible param change to RestLiResourceModelExporter.export()

1.8.29
------
(RB=169640)
Refactor IDL compatibility checking. Allow compatibility checking of referenced named Schemas.
Slightly alter some compatibility messages.

(RB=169203)
Add -resourceclasses option to idl generator command line application.

(RB=170283)
Update Gradle plugin. Use this version as source of truth in LinkedIn toolset.

1.8.28
------
(RB=167736)
Fix interface definition generation for typerefs in action return types and refactor RestLiAnnotationReader
to make action validation easier to understand.

1.8.27
------
(RB=168797)
Revert eec968ddab745286a8c9e05e35f0ddeab011a947 "Refactoring changes for testing resource compatibility."
as it breaks rum publishRestModel with this message:
"No such property: summary for class: com.linkedin.restli.tools.idlcheck.RestLiResourceModelCompatibilityChecker"

1.8.26
------
(RB=167737)
Add RestClient.sendRestRequest(..., Callback<RestResponse> callback) method.

1.8.25
------
(RB=168185)